java 8 TrackingDeviceService